--- a/WebJSP/src/main/webapp/WEB-INF/web.xml
+++ b/WebJSP/src/main/webapp/WEB-INF/web.xml
@@ -9,4 +9,15 @@
     <welcome-file>default.jsp</welcome-file>
     <welcome-file>default.htm</welcome-file>
   </welcome-file-list>
+  
+  <context-param>
+  	<description>개발자 마음 ...</description>
+  	<param-name>email</param-name>
+  	<param-value>kosa@kosa.or.kr</param-value>
+  </context-param>
+  <context-param>
+  	<description>기본파일 업로드</description>
+  	<param-name>filepath</param-name>
+  	<param-value>C:\\web\\download</param-value>
+  </context-param>
 </web-app>
